...
            future: repo.getExperimentalFeatures().first,
            initialData: false,
            builder: (context, snapshot) {
              final enabled = snapshot.data ?? false;
              return enabled
                  ? IrmaNavButton(
                      key: const Key('nav_button_mfa'),
                      iconData: Icons.key,
                      tab: IrmaNavBarTab.mfa,
                      changeTab: onChangeTab,
                      isSelected: IrmaNavBarTab.mfa == selectedTab,
                    )
                  : const SizedBox.shrink();
...
                      isSelected: IrmaNavBarTab.notifications == selectedTab,
                    );
            },
          ),

          IrmaNavButton(
            key: const Key('nav_button_more'),
            iconData: Icons.more_horiz,
            tab: IrmaNavBarTab.more,
            changeTab: onChangeTab,
            isSelected: IrmaNavBarTab.more == selectedTab,
          )
        ],
...
