...
                  },
                  floatingActionButtonLocation: FloatingActionButtonLocation.centerDocked,
                  resizeToAvoidBottomInset: false,
                  floatingActionButton: Padding(
                    padding: const EdgeInsets.only(bottom: 6),
                    child: const IrmaQrScanButton(
                      key: Key('nav_button_scanner'),
                    ),
                  ),
                  bottomNavigationBar: IrmaNavBar(
                    selectedTab: tabState,
                    onChangeTab: changeTab,
                  ),
...
